# resourcerer

./: .gitignore  .mkcommit.py  README.md  setup.cfg
resourcerer/: __init__.py  _conf.py  caching.py  defaults.py  exceptions.py  get_resources.py  log.py  model.py  parse_yaml.py  send_resources.py  types.py  utils.py
resourcerer/cachers/: simple.py
resourcerer/main/: get_resources.py  main.py  send_resources.py
resourcerer/onedrive/: auth.py  env.py  get.py  get_from_onedrive.py  model.py  send.py  send_to_onedrive.py
test/: test_caching.py  test_model.py
test/generic/: resources.yaml  test_download.py
test/onedrive/: testUpload.txt  test_download.py  test_upload.py
