[metadata]
name = resourcerer
author = Krzysztof Czarnecki
author_email = krzysztof.czarnecki@technica-engineering.de
version = attr: resourcerer.__version__
url = https://github.com/Technica-Engineering/resourcerer
description = 
    Gets resource files for testing from a configured
    remote location allowing you to separate code from
    test resources
long_description = file: README.md
keywords = automation, testing, resources, download, onedrive
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    get_resources = resourcerer.get_resources:main
    send_resources = resourcerer.send_resources:main

[options.extras_require]
dev = 
    flake8 
    twine 
    setuptools
    autopep8

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 16
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241
